--- a/Views/UserPasswordEditView.xaml
+++ b/Views/UserPasswordEditView.xaml
@@ -36,6 +36,11 @@
                         Margin="8"
                         Orientation="Vertical">
                 <PasswordBox sif:PasswordBoxAssistant.BindPassword="True"
+                             sif:PasswordBoxAssistant.BoundPassword="{Binding OldPassword,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+                             sif:PasswordBoxBehavior.SelectAllTextOnFocus="True"
+                             materialDesign:HintAssist.Hint="{lex:LocTextUpper Key=IF_OLD_PASSWORD}"
+                             Visibility="{Binding ShowOldPassword, Converter={StaticResource BoolToVisibilityConverter}}" />
+                <PasswordBox sif:PasswordBoxAssistant.BindPassword="True"
                              sif:PasswordBoxAssistant.BoundPassword="{Binding Password,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
                              sif:PasswordBoxBehavior.SelectAllTextOnFocus="True"
                              materialDesign:HintAssist.Hint="{lex:LocTextUpper Key=IF_NEW_PASSWORD}" />
@@ -43,12 +48,26 @@
                               sif:PasswordBoxAssistant.BindPassword="True"
                               sif:PasswordBoxBehavior.SelectAllTextOnFocus="True"
                               materialDesign:HintAssist.Hint="{lex:LocTextUpper Key=IF_REPEAT_PASSWORD}" />
-                <Button  Content="{lex:LocTextUpper UI_ACCEPT}"
-                         Margin="4,16,4,0"
-                         IsDefault="True"
-                         materialDesign:ShadowAssist.ShadowDepth="Depth0"
-                         Command="{Binding AcceptCommand}"
-                         Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.5*" />
+                        <ColumnDefinition Width="0.5*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Content="{lex:LocTextUpper UI_CANCEL}"
+                            Margin="4,16,4,0"
+                            IsDefault="True"
+                            Visibility="{Binding ShowOldPassword, Converter={StaticResource BoolToVisibilityConverter}}"
+                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                            Command="{Binding CancelCommand}"
+                            Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Content="{lex:LocTextUpper UI_ACCEPT}"
+                            Grid.Column="1"
+                            Margin="4,16,4,0"
+                            IsDefault="True"
+                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                            Command="{Binding AcceptCommand}"
+                            Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                </Grid>
             </StackPanel>
         </Grid>
     </Border>
