--- a/Views/PasswordReset/PasswordResetFailureView.xaml
+++ b/Views/PasswordReset/PasswordResetFailureView.xaml
@@ -22,6 +22,6 @@
         <TextBlock VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    Grid.Row="1"
-                   Text="{lex:LocText Key=PASSWORD_RESET_FAILED_MESSAGE}" />
+                   Text="{Binding ErrorMessage}" />
     </Grid>
 </UserControl>
